# ainari

./: .gitignore  .mdformat.toml  .secrets.baseline  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  Dockerfile  Earthfile  LICENSE  README.md  ROADMAP.md  SECURITY.md  Vagrantfile  commitlint.config.cjs  mkdocs.yml
src/binaries/bento/: Cargo.toml
src/binaries/bento/src/: config.rs  main.rs
src/binaries/bento/src/api/: http_server.rs
src/binaries/bento/src/database/: checkpoint_table.rs  dataset_table.rs  mod.rs
src/binaries/hanami/: .secrets.baseline  Cargo.toml  build.rs  hanami_core_cpp
src/binaries/hanami/src/: config.rs  main.rs
src/binaries/hanami/src/api/: errors.rs  http_server.rs  middleware.rs  mod.rs  token_handling.rs  user_context.rs
src/binaries/hanami/src/core/: cluster.rs  cluster_handler.rs  cluster_interface.rs  mod.rs  task_queue.rs
src/binaries/hanami/src/database/: checkpoint_table.rs  cluster_table.rs  dataset_table.rs  host_table.rs  meta_cluster_table.rs  meta_model_table.rs  mod.rs  project_table.rs  task_table.rs  user_table.rs
src/binaries/miko/: Cargo.toml
src/binaries/miko/src/: config.rs  main.rs
src/binaries/miko/src/api/: http_server.rs  miko_auth_middleware.rs  mod.rs  token_handling.rs
src/binaries/miko/src/database/: mod.rs  project_table.rs  quota_table.rs  user_table.rs
src/binaries/onsen/: Cargo.toml  build.rs
src/binaries/onsen/src/: config.rs  main.rs  ryokan_interaction.rs  server.rs
src/binaries/sakura/: Cargo.toml
src/binaries/sakura/src/: config.rs  hanami_interaction.rs  main.rs
src/binaries/sakura/src/api/: http_server.rs  mod.rs
src/binaries/sakura/src/core/: cluster_handler.rs  cluster_interface.rs  mod.rs  model_handler.rs  model_interface.rs
src/binaries/sakura/src/database/: cluster_table.rs  db_handle.rs  mod.rs  model_table.rs  task_table.rs
src/hanami/: CMakeLists.txt  Cargo.toml  build.rs  hanami_core_cpp
src/hanami/src/: config.h  config.rs  hanami_root.cpp  hanami_root.h  main.cpp  main.rs
src/hanami/src/api/: errors.rs  http_server.rs  middleware.rs  mod.rs  token_handling.rs  user_context.rs
src/hanami/src/api/endpoint_processing/: auth_check.cpp
src/hanami/src/api/http_endpoints/: mod.rs
src/hanami/src/api/websocket/: cluster_io.cpp  file_upload.h
src/hanami/src/common/: enums.rs  error.rs  functions.rs  mod.rs  objects.rs
src/hanami/src/core/: cluster.rs  cluster_handler.rs  mod.rs  task_queue.rs  tasks.rs  thread_binder.cpp
src/hanami/src/core/cluster/: cluster.cpp  cluster.h  cluster.rs  cluster_handler.rs  cluster_init.cpp  mod.rs  objects.h  task.h
src/hanami/src/core/processing/: axon_handling.h  cluster_resize.h  logical_host.cpp  logical_host.h  worker_thread.cpp
src/hanami/src/database/: audit_log_table.cpp  checkpoint_table.cpp  checkpoint_table.h  checkpoint_table.rs  cluster_table.cpp  cluster_table.h  cluster_table.rs  dataset_table.cpp  dataset_table.h  dataset_table.rs  db_handle.rs  error_log_table.cpp  mod.rs  project_table.rs  projects_table.cpp  projects_table.h  task_table.rs  tempfile_table.cpp  user_table.rs  users_table.cpp  users_table.h
src/hanami/src/database/generic_tables/: hanami_sql_admin_table.cpp  hanami_sql_admin_table.h  hanami_sql_table.cpp
src/hanami/tests/memory_leak_tests/core/: cluster_test.cpp  dataset_io_test.cpp  dataset_io_test.h
src/hanami/tests/unit_tests/core/: cluster_io_convert_test.cpp  cluster_test.cpp  processing_test.cpp
src/hanami/tests/unit_tests/database/: audit_log_table_test.cpp  cluster_table_test.cpp  error_log_table_test.cpp  projects_table_test.cpp  users_table_test.cpp
src/libs/cpp/hanami_core/: CMakeLists.txt  cluster_link.h  hanami_root.h  hanami_structs.h
src/libs/cpp/hanami_core/src/: hanami_root.cpp  routing_functions.h  temp_file_handler.cpp  temp_file_handler.h  thread_binder.cpp  thread_binder.h  types.h
src/libs/rust/ainari_api/: Cargo.toml  build.rs
src/libs/rust/ainari_api/src/: auth_middleware.rs  common_functions.rs  config.rs  cors_middleware.rs  errors.rs  lib.rs  user_context.rs
src/libs/rust/ainari_api_structs/: Cargo.toml
src/libs/rust/ainari_api_structs/src/: auth_structs.rs  checkpoint_structs.rs  cluster_structs.rs  common_structs.rs  dataset_structs.rs  endpoints_structs.rs  file_structs.rs  host_structs.rs  lib.rs  model_structs.rs  project_structs.rs  proxy_structs.rs  quota_structs.rs  secret_structs.rs  task_structs.rs  user_context.rs  user_structs.rs
src/libs/rust/ainari_clients/: Cargo.toml  build.rs
src/libs/rust/ainari_clients/src/: auth.rs  checkpoint.rs  cluster.rs  dataset.rs  endpoints.rs  host.rs  lib.rs  model.rs  onsen_file_transfer.rs  proxy.rs  quota.rs  secret.rs
src/libs/rust/ainari_cluster_parser/: Cargo.toml
src/libs/rust/ainari_cluster_parser/src/: cluster_meta_structs.rs  cluster_parser.pest  cluster_parser.rs  lib.rs
src/libs/rust/ainari_common/: Cargo.toml
src/libs/rust/ainari_common/src/: config.rs  constants.rs  counter.rs  enums.rs  error.rs  functions.rs  lib.rs  objects.rs  secret.rs
src/libs/rust/ainari_dataset/: Cargo.toml
src/libs/rust/ainari_dataset/src/: converter.rs  dataset_io.rs  file_encryption.rs  lib.rs
src/libs/rust/ainari_model_parser/: Cargo.toml
src/libs/rust/ainari_model_parser/src/: lib.rs  model_meta_structs.rs  model_parser.pest  model_parser.rs
src/libs/rust/ainari_structs/: Cargo.toml
src/libs/rust/ainari_structs/src/: auth_structs.rs  checkpoint_structs.rs  cluster_structs.rs  common_structs.rs  dataset_structs.rs  lib.rs  project_structs.rs  task_structs.rs  user_structs.rs
src/libs/rust/hanami_core/: Cargo.toml  build.rs  hanami_core_cpp
src/libs/rust/hanami_core/.cargo/: config.toml
src/libs/rust/hanami_core/src/: cluster.rs  cluster_handler.rs  hanami_root.h  lib.rs  task_queue.rs  tasks.rs
src/libs/rust/hanami_dataset/: Cargo.toml
src/libs/rust/hanami_dataset/src/: converter.rs  dataset_io.rs  lib.rs
src/libs/rust/hanami_structs/: Cargo.toml
src/libs/rust/hanami_structs/src/: checkpoint_structs.rs  dataset_structs.rs  project_structs.rs  task_structs.rs  (+1 more)
(+1140 files in other folders)
