[workspace]
members = [
    "src/binaries/hanami",
    "src/libs/rust/ainari_common",
    "src/libs/rust/ainari_cluster_parser",
    "src/libs/rust/ainari_dataset", 
    "src/libs/rust/ainari_api", 
    "src/libs/rust/ainari_hardware", 
    "src/binaries/miko"]

[profile.dev]
opt-level = 0
debug = true
overflow-checks = true

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
