[package]
name = "hanami"
version = "0.8.0"
edition = "2024"

[dependencies]
# web-server
actix-web = "4"
futures = "0.3"
bytes = "1"
# openapi-generator
schemars = { package = "apistos-schemars", version = "0.8", features = ["chrono", "uuid1", "url", "rust_decimal"] }
apistos = "0.5"
# json
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# jwt-token
jsonwebtoken = "9"
# config-file
toml = "0.7"
# singleton (like used for the config-variable)
once_cell = "1.18"
# logger
log = "0.4"
env_logger = "0.10"
# sqlite-database
diesel = { version = "2.2", features = ["sqlite"] }
lazy_static = "1.4"
# timestamps
chrono = "0.4.40"
# randomizer
rand = "0.9.0"
# hash
sha2 = "0.10.8"
hex = "0.4"