[package]
name = "hanami"
version = "0.8.0"
edition = "2024"

[dependencies]
hanami_core = { path = "../libs/rust/hanami_core" }
hanami_dataset = { path = "../libs/rust/hanami_dataset" }
hanami_common = { path = "../libs/rust/hanami_common" }
# web-server
actix-web = "4"
actix-multipart = "0.7"
futures-util = "0.3"
tokio = { version = "1", features = ["fs"] }
actix-rt = "2.10"
# openapi-generator
schemars = { package = "apistos-schemars", version = "0.8", features = ["chrono", "uuid1", "url", "rust_decimal"] }
apistos = { version = "0.5", features = ["extras"] }
# json
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
# jwt-token
jsonwebtoken = "9"
# config-file
toml = "0.7"
# singleton (like used for the config-variable)
once_cell = "1.18"
# logger
log = "0.4"
env_logger = "0.10"
# database
diesel = { version = "2.2", features = ["sqlite", "uuid"] }
# common stuff
rand = "0.9.0"
lazy_static = "1.4"
chrono = "0.4.40"
futures = "0.3"
bytes = "1"
uuid = { version = "1.16.0", features = ["v4"] }
sanitize-filename = "0.5"
byteorder = "1.5"
bincode = "1.3"