[package]
name = "miko"
version = "0.9.0"
edition = "2024"
rust-version = "1.85.1"

[dependencies]
ainari_common = { path = "../../libs/rust/ainari_common" }
ainari_api = { path = "../../libs/rust/ainari_api" }
ainari_api_structs = { path = "../../libs/rust/ainari_api_structs" }
# web-server
actix-web = "4"
actix-multipart = "0.7"
futures-util = "0.3"
tokio = { version = "1", features = ["fs"] }
actix-rt = "2.10"
# openapi-generator
schemars = { package = "apistos-schemars", version = "0.8", features = ["chrono", "uuid1", "url", "rust_decimal"] }
apistos = { version = "0.6", features = ["extras"] }
validator = { version = "0.20", features = ["derive"] }
# serialize
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
# jwt-token
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
# config-file
toml = "1.1"
# singleton (like used for the config-variable)
once_cell = "1.21"
# logger
log = "0.4"
env_logger = "0.11"
# database
diesel = { version = "2.3", features = ["sqlite", "uuid"] }
# common stuff
rand = "0.10.1"
lazy_static = "1.4"
chrono = "0.4.43"
futures = "0.3"
uuid = { version = "1.23.1", features = ["serde", "fast-rng", "v4"] }

[dev-dependencies]
serial_test = "3"
