[package]
name = "onsen"
version = "0.9.0"
edition = "2024"
rust-version = "1.85.1"

[dependencies]
ainari_dataset = { path = "../../libs/rust/ainari_dataset" }
ainari_common = { path = "../../libs/rust/ainari_common" }
ainari_api = { path = "../../libs/rust/ainari_api" }
ainari_api_structs = { path = "../../libs/rust/ainari_api_structs" }
ainari_clients = { path = "../../libs/rust/ainari_clients" }
# web-server
actix-web = "4"
actix-multipart = "0.7"
futures-util = "0.3"
tokio = { version = "1", features = ["full"] }
actix-rt = "2.10"
# read some hardware-information
sysinfo = "0.38.2"
# serialize
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
serde-big-array = "0.5"
# config-file
toml = "0.9"
# singleton (like used for the config-variable)
once_cell = "1.18"
# logger
log = "0.4"
env_logger = "0.11"
# common stuff
rand = "0.9.2"
lazy_static = "1.4"
chrono = "0.4.43"
futures = "0.3"
bytes = "1"
uuid = { version = "1.20.0", features = ["serde", "fast-rng", "v4"] }
byteorder = "1.5"
bincode = { version = "2.0", features = ["serde"] }
bytemuck = "1.25"
# file-server
tonic = "0.14"
prost = "0.14"
# only if you need the Prost codec at runtime
tonic-prost = "0.14"
async-stream = "0.3"
futures-core = "0.3"

[build-dependencies]
tonic-prost-build = "0.14"

[dev-dependencies]
serial_test = "3"
