[package]
name = "sakura"
version = "0.9.0"
edition = "2024"
rust-version = "1.85.1"

[dependencies]
ainari_dataset = { path = "../../libs/rust/ainari_dataset" }
ainari_common = { path = "../../libs/rust/ainari_common" }
ainari_model_parser = { path = "../../libs/rust/ainari_model_parser" }
ainari_api = { path = "../../libs/rust/ainari_api" }
ainari_api_structs = { path = "../../libs/rust/ainari_api_structs" }
ainari_hardware = { path = "../../libs/rust/ainari_hardware" }
ainari_clients = { path = "../../libs/rust/ainari_clients" }
# web-server
actix-web = "4"
actix-multipart = "0.7"
futures-util = "0.3"
tokio = { version = "1", features = ["fs"] }
actix-rt = "2.10"
# openapi-generator
schemars = { package = "apistos-schemars", version = "0.8", features = ["chrono", "uuid1", "url", "rust_decimal"] }
apistos = { version = "0.6", features = ["extras"] }
validator = { version = "0.20", features = ["derive"] }
# serialize
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
serde-big-array = "0.5"
# config-file
toml = "1.1"
# singleton (like used for the config-variable)
once_cell = "1.18"
# logger
log = "0.4"
env_logger = "0.11"
# database
diesel = { version = "2.3", features = ["sqlite", "uuid"] }
# threading
core_affinity = "0.8.3"
# read some hardware-information
sysinfo = "0.38.4"
# common stuff
rand = "0.10.1"
lazy_static = "1.4"
chrono = "0.4.43"
futures = "0.3"
bytes = "1"
uuid = { version = "1.23.1", features = ["serde", "fast-rng", "v4"] }
byteorder = "1.5"
bincode = { version = "2.0", features = ["serde"] }
bytemuck = "1.25"

[dev-dependencies]
serial_test = "3"
