[package]
name = "ainari_api"
version = "0.1.0"
edition = "2024"
build = "build.rs"
rust-version = "1.85.1"

[dependencies]
ainari_common = { path = "../ainari_common" }
# web-server
actix-web = "4"
actix-multipart = "0.7"
futures-util = "0.3"
tokio = { version = "1", features = ["fs"] }
actix-rt = "2.10"
# openapi-generator
schemars = { package = "apistos-schemars", version = "0.8", features = ["chrono", "uuid1", "url", "rust_decimal"] }
apistos = { version = "0.6", features = ["extras"] }
validator = { version = "0.20", features = ["derive"] }
# json
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# common stuff
uuid = { version = "1.18.0", features = ["v4"] }
futures = "0.3"
base64 = "0.22" 
# singleton (like used for the config-variable)
once_cell = "1.18"

