[package]
name = "ainari_cluster_parser"
version = "0.1.0"
edition = "2024"

[dependencies]
ainari_common = { path = "../ainari_common" }
# parser-generator
pest = "2"
pest_derive = "2"

# json
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# common stuff
uuid = { version = "1.17.0", features = ["v4"] }
rand = "0.9.2"
