[package]
name = "ainari_common"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.1"

[dependencies]
# hash
sha2 = "0.10.8"
hex = "0.4"

# json
serde = { version = "1", features = ["derive", "serde_derive", "alloc"] }
serde_with = "3.14"
serde_json = "1"
schemars = { package = "apistos-schemars", version = "0.8", features = ["chrono", "uuid1", "url", "rust_decimal"] }
validator = { version = "0.20", features = ["derive"] }
