[package]
name = "ainari_dataset"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.1"

[dependencies]
ainari_common = { path = "../ainari_common" }
# json
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# common stuff
sanitize-filename = "0.6"
byteorder = "1.5"
bincode = "2.0"
bytemuck = "1.23"
csv = "1.3"
uuid = { version = "1.18.0", features = ["v4", "serde"] }
