[package]
name = "ainari_dataset"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.1"

[dependencies]
ainari_common = { path = "../ainari_common" }
# json
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# common stuff
byteorder = "1.5"
bincode = "2.0"
bytemuck = "1.25"
csv = "1.4"
uuid = { version = "1.23.2", features = ["v4", "serde"] }
tokio = { version = "1.49", features = ["rt-multi-thread", "macros", "fs"] }
# encryption
openssl = "0.10"
hex = "0.4"
base64 = "0.22"
