[package]
name = "ainari_model_parser"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.1"

[dependencies]
ainari_common = { path = "../ainari_common" }
# parser-generator
pest = "2"
pest_derive = "2"

# json
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# common stuff
uuid = { version = "1.20.0", features = ["v4"] }
rand = "0.10.0"
