[package]
name = "ainari_structs"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.1"

[dependencies]
# openapi-generator
schemars = { package = "apistos-schemars", version = "0.8", features = ["chrono", "uuid1", "url", "rust_decimal"] }
apistos = { version = "0.6", features = ["extras"] }
validator = { version = "0.20", features = ["derive"] }
# json
serde = { version = "1", features = ["derive"] }
# common stuff
uuid = { version = "1.18.0", features = ["v4"] }

